# CV_algorithms

./: LICENSE  README.md
C++/src/GrowCut/: CMakeLists.txt  GrowCut.cpp
Python/src/grow_cut/: grow_cut.py
